@@ -1,3 +1,14 @@
+2018-11-07 Marco Bodrato <bodrato@mail.dm.unipi.it>
+
+	From Seth Troisi:
+	* doc/gmp.texi: Update mpz_millerrabin documentation.
+
+	* mpn/x86_64/bd2/gcd_11.asm: Micro-optimisation.
+	* doc/gmp.texi: Further update in mpz_millerrabin.
+	* tests/misc.c: Silence a warning.
+	* tests/mpz/t-pprime_p.c (const primes): One more prime in the list.
+	* mpz/millerrabin.c: Return 2 for surely prime numbers (BPSW checked).
+
 2019-08-08  Niels Möller  <nisse@lysator.liu.se>
 
 	* tests/refmpn.c (refmpn_gcd_11): New function, based on refmpn_gcd_1.
